[package]
name = "lorem"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "A simple command-line tool for generating lorem-ipsum text."
readme = "README.md"
repository = "https://github.com/prabhdatnoor/lorem"
homepage = "https://github.com/prabhdatnoor/lorem"
keywords = ["lorem", "ipsum", "text", "generator", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
rand = "0.9.0-alpha.0"
